@@ -27,21 +27,31 @@
 #define OP_DEFAULT_BUF_SIZE 65536
 /** we don't try to wake-up daemon until it remains more than this free entry
  * in eviction buffer */
-#define OP_PRE_WATERMARK 8192
+#define OP_PRE_WATERMARK(buffer_size)			\
+	(((buffer_size) / 8) < OP_MIN_PRE_WATERMARK	\
+		? OP_MIN_PRE_WATERMARK			\
+		: (buffer_size) / 8)
+/* minimal buffer water mark before we try to wakeup daemon */
+#define OP_MIN_PRE_WATERMARK 8192
 /** maximum number of entry in samples eviction buffer */
 #define OP_MAX_BUF_SIZE	1048576
 /** minimum number of entry in samples eviction buffer */
-#define OP_MIN_BUF_SIZE	(32768 + OP_PRE_WATERMARK)
+#define OP_MIN_BUF_SIZE	(32768 + OP_PRE_WATERMARK(32768))
 
 /** 16384 * sizeof(op_note) = 273680 bytes default */
 #define OP_DEFAULT_NOTE_SIZE 16384
 /** we don't try to wake-up daemon until it remains more than this free entry
  * in note buffer */
-#define OP_PRE_NOTE_WATERMARK	512
+#define OP_PRE_NOTE_WATERMARK(note_size)		\
+	(((note_size) / 32) < OP_MIN_NOTE_PRE_WATERMARK	\
+		? OP_MIN_NOTE_PRE_WATERMARK		\
+		: (note_size) / 32)
+/* minimal note buffer water mark before we try to wakeup daemon */
+#define OP_MIN_NOTE_PRE_WATERMARK 512
 /** maximum number of entry in note buffer */
 #define OP_MAX_NOTE_TABLE_SIZE	1048576
 /** minimum number of entry in note buffer */
-#define OP_MIN_NOTE_TABLE_SIZE	(1024 + OP_PRE_NOTE_WATERMARK)
+#define OP_MIN_NOTE_TABLE_SIZE	(1024 + OP_PRE_NOTE_WATERMARK(1024))
 
 /** maximum sampling rate when using RTC */
 #define OP_MAX_RTC_COUNT	4096
